Add camel-main archetype

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>camel-blueprint</module>
         <module>camel-endpointdsl</module>
         <module>camel-java</module>
+        <module>camel-main</module>
     </modules>
 
     <properties>
